Fix drop-down language on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1016,6 +1016,7 @@ header {
     padding: 40px 20px;
     margin: 15px 0px;
     width: 250px;
+    min-height: 455px;
 }
 
 .team::after {
